# KidClone

./: CMakeLists.txt  CMakeSettings.json  KidClone.licenseheader  KidClone.sln
CMake/Modules/: KidCloneCommon.cmake
KidClone/: KidClone.cpp  KidClone.vcxproj  KidClone.vcxproj.filters
Source/: CMakeLists.txt  Common.cpp  Common.h  Main.cpp  pch.h
Source/Common/: Logging.cpp  Logging.h  Rect.h  String.cpp  String.h  Vector2.h  Vector2.inl
Source/Engine/: Clock.cpp  Clock.h  Colour.cpp  Colour.h  Config.h  Engine.cpp  Engine.h  Event.h  Image.cpp  Image.h  InputImpl.h  Mouse.cpp  Mouse.h  Window.cpp  Window.h
Source/Engine/Events/: EngineEvent.cpp  EngineEvent.h
Source/Engine/Exception/: EngineError.h  SDLError.h
Source/Engine/Render/: Drawable.h  RenderTarget.cpp  RenderTarget.h  Transform.cpp  Transform.h  Transformable.cpp  Transformable.h
Source/Engine/SDL/: EventsImplSDL.cpp  EventsImplSDL.h  InputImplSDL.cpp  InputImplSDL.h  RendererSDL.cpp  RendererSDL.h  Surface.cpp  Surface.h  TextureSDL.cpp  TextureSDL.h  VideoModeImplSDL.cpp  WindowImplSDL.cpp  WindowImplSDL.h
Source/Engine/Window/: RenderWindow.cpp  RenderWindow.h  VideoMode.cpp  VideoMode.h  VideoModeImpl.h  WindowEvent.h  WindowImpl.cpp  WindowImpl.h  WindowStyle.h
Source/Game/: Game.cpp  Game.h
Source/Helper/: CStringView.h  NoCopy.h
Tests/: CMakeLists.txt  Main.cpp  Setup.cpp  Setup.h
Tests/Engine/: EventsTest.cpp  ImageTest.cpp  TextureTest.cpp
